--- a/notes/factors/index.html
+++ b/notes/factors/index.html
@@ -9,11 +9,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="/style.css" />
     <link href="/feed.atom.xml" type="application/atom+xml" rel="alternate" title="Житейские воззрения пана Семушельского Atom Feed" />
-        <meta name="description" content="Разбираемся с последней модой в области пассивных инвестиций: инвестиционными факторами и smart-beta фондами. Как выясняется, смысла в это довольно мало." />
+        <meta name="description" content="Разбираемся с последней модой в области пассивных инвестиций: инвестиционными факторами и smart-beta фондами. Как выясняется, смысла в этом довольно мало." />
         <meta name="keywords" content="финансовая грамотность, фондовый рынок, акции, диверсификация, ребалансировка, портфель, риск, доходность, инвестиционные факторы, Фама, Френч, CAPM" />
 
 <meta property="og:locale" content="ru" />
-    <meta property="og:description" content="Разбираемся с последней модой в области пассивных инвестиций: инвестиционными факторами и smart-beta фондами. Как выясняется, смысла в это довольно мало." />
+    <meta property="og:description" content="Разбираемся с последней модой в области пассивных инвестиций: инвестиционными факторами и smart-beta фондами. Как выясняется, смысла в этом довольно мало." />
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2020-09-17" />
         <meta property="og:article:modified_time" content="2020-09-17" />
@@ -53,7 +53,7 @@
     <header>
         <h1>Инвестиционные факторы</h1>
         <div class="meta">
-                <p class="description">Разбираемся с последней модой в области пассивных инвестиций: инвестиционными факторами и smart-beta фондами. Как выясняется, смысла в это довольно мало.</p>
+                <p class="description">Разбираемся с последней модой в области пассивных инвестиций: инвестиционными факторами и smart-beta фондами. Как выясняется, смысла в этом довольно мало.</p>
                 <p> Обновлено: <time>2020-09-17</time> </p>
 
         </div>
@@ -721,7 +721,7 @@
     <aside>
         <div style="display: flex; flex-direction: column; text-align: right;">
         <div class="share-buttons">
-            <a href="https://vk.com/share.php?url=https://onfin.github.io/notes/factors&title=Инвестиционные факторы&description=Разбираемся с последней модой в области пассивных инвестиций: инвестиционными факторами и smart-beta фондами. Как выясняется, смысла в это довольно мало." target="_blank"><i class="share">&#xea9d;</i></a>
+            <a href="https://vk.com/share.php?url=https://onfin.github.io/notes/factors&title=Инвестиционные факторы&description=Разбираемся с последней модой в области пассивных инвестиций: инвестиционными факторами и smart-beta фондами. Как выясняется, смысла в этом довольно мало." target="_blank"><i class="share">&#xea9d;</i></a>
             <a href="https://t.me/share/url?url=https://onfin.github.io/notes/factors" target="_blank"><i class="share">&#xea9b;</i></a>
             <a href="https://twitter.com/intent/tweet?text=https://onfin.github.io/notes/factors" target="_blank"><i class="share">&#xea9c;</i></a>
             <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/notes/factors" target="_blank"><i class="share">&#xea93;</i></a>
