--- a/literacy/instruments/gold.html
+++ b/literacy/instruments/gold.html
@@ -16,7 +16,7 @@
     <meta property="og:description" content="Виды, специфика, риски и доходность вложений в золото." />
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2020-01-04" />
-        <meta property="og:article:modified_time" content="2020-01-05" />
+        <meta property="og:article:modified_time" content="2020-10-09" />
 <meta property="og:title" content="Золото" />
 <meta property="og:url" content="https://onfin.github.io/literacy/instruments/gold" />
 
@@ -54,13 +54,27 @@
         <h1>Золото</h1>
         <div class="meta">
                 <p class="description">Виды, специфика, риски и доходность вложений в золото.</p>
-                <p> Обновлено: <time>2020-01-05</time> </p>
+                <p> Обновлено: <time>2020-10-09</time> </p>
 
         </div>
     </header>
 
     <div class="content">
-        <p>Начнём с самых главных <a href="https://www.gold.org/goldhub/data/demand-and-supply">фактов про золото</a>:</p>
+        <div class="toc">
+<ul>
+<li><a href="#_1">Производство, потребление и историческая динамика</a></li>
+<li><a href="#_2">Способы приобретения золота</a></li>
+<li><a href="#_3">Оптимальная доля золота в портфеле</a></li>
+<li><a href="#_4">Альтернативы золоту</a><ul>
+<li><a href="#_5">Золотодобытчики</a></li>
+</ul>
+</li>
+<li><a href="#_6">Корзина драгметаллов</a></li>
+<li><a href="#_7">Корзина биржевых товаров</a></li>
+</ul>
+</div>
+<h2 id="_1">Производство, потребление и историческая динамика</h2>
+<p>Начнём с самых главных <a href="https://www.gold.org/goldhub/data/demand-and-supply">фактов про золото</a>:</p>
 <ul>
 <li>потребление — 330 тонн/год и снижается,</li>
 <li>добыча — 3300 тонн/год (да, в 10 раз больше потребления) и растёт,</li>
@@ -71,7 +85,7 @@
 <p><img src=/literacy/instruments/gold.svg style="width: 100%; height: 50wv" /></p>
 <p>Здесь за единицу взята средняя цена за весь период наблюдений. Видно как после повсеместной отмены золотого стандарта стоимость золота очень точно повторяет движение стоимости нефти. Я не изучал природу этой корреляции и, возможно, она случайна, но всё равно настораживает (cтоит заметить, что цена на золото-нефть не скоррелирована с <a href="https://www.investing.com/indices/sp-gsci-commodity-total-return-historical-data">ценой корзины биржевых товаров</a>).</p>
 <p>Золото не приносит дохода, только издержки на хранение. Однако, из-за своей некореллированости с рынками акций и облигаций, считается хорошим инструментом для <a href="/notes/diversification_math2">диверсификации портфеля</a>. Но держать золото в портфеле очень тяжело психологически. Из-за того, что (а) за кратким пиком цены на золото следует её затяжное, более десятилетия, падение; (б) налицо перепроизводство золота и падение его роли как инвестиционного актива.</p>
-<p>Способы приобретения золота для тех, кто всё-таки решил иметь его в своём портфеле.</p>
+<h2 id="_2">Способы приобретения золота</h2>
 <ol>
 <li>Банковские золотые слитки. Продаёт практически любой крупный банк, от 1 грамма (примерно 3Кр на январь 2020г). Проблемы: необходимо очень бережное отношение к слитку (отпечаток пальца или царапина <em>очень</em> сильно снижают цену) и сертификату на него (слиток без сертификата не может быть продан банку), при покупке нужно заплатить НДС (20% сверху цены продажи), цена продажи банку на 10–30% ниже цены покупки т.е. нужно ждать примерно полуторакратного удорожания (+ инфляция), чтобы просто вернуть свои вложения.</li>
 <li>Инвестиционные монеты. Ситуация примерно такая же как и со слитками, но покупка-продажа монет не облагается НДС. Также, монета может иметь некоторую коллекционную ценность и получить дополнительную «наценку» к цене золота в монете. Так что это более предпочительный способ сбережений, чем слитки (хотя монеты стоят обычно от 15Кр), хотя уплаченная при покупке «коллекционная наценка» может к моменту продажи и испариться. У небанковских организаций обычно лучше условия по покупке-продаже монет, чем у банков.</li>
@@ -81,9 +95,437 @@
 <li>Покупка фьючерсного контракта на срочном рынке. Вы «договариваетесь» купить золото в будущем (в дату <em>экспирации</em>) по сегодняшней цене фьючерса. От вас потребуется зарезервировать на счёте примерно 10% от стоимости контракта (<em>гарантийное обеспечение, ГО</em>), но каждый день ваш счёт будет ежедневно изменяться как будто вы уже купили это золото по оговорённой цене и тут же продали по текущей. После экспирации контракт будет списан и счёт изменяться перестанет. Вам необходимо следить, чтобы вовремя довнести нужную сумму денег для поддержания нужного уровня ГО (а ещё сама биржа, при сильных колебаниях цены может изменить этот уровень с обычных 10% до 20 или даже 30) и компенсации падения цены. Было бы простым решением держать на счёте всю стоимость «фьючерсного» золота, однако начальная цена определяется с учётом стоимости денег (заплатите-то вы потом) т.е. вы должны на всю сумму контракта получать процент не ниже ключевой ставки, чтобы не потерять свои деньги на т.н. <em>распаде временно́й стомости</em>. Также, в стоимость фьючерса уже заложено ожидание роста/падения цены к моменту его экспирации, поэтому, если ожидания оправдываются, вы получаете меньшую прибыль или меньший убыток по сравнению с владением реальным золотом, а если не оправдываются — наоборот: бо́льшую прибыль или бо́льший убыток.</li>
 <li>Покупка паёв ПИФа на золото. Управляющая компания в обмен на ваши деньги купит и разместит в специальном хранилище или физическое золото, или паи другого фонда на золото, или заключит договоры, которые обеспечат изменение стоимости вашего вложения аналогично изменению цены на золото. Проблемы российских ПИФов: формально могут инвестировать во что угодно, а не во что обещали, особенности работы заставляют держать 10–15% активов в деньгах, а не в желаемом инструменте, <a href="https://fintraining.livejournal.com/791661.html">огромные комиссии и отвратительное качество управления</a>.</li>
 <li>Покупка ETF на золото. Аналогично ПИФу, но паи торгуются на рынке ⇒ справедливая рыночная цена и минимальный спред между ценами покупки и продажи; ETF лучше регулируется чем ПИФ (и биржевой ПИФ), не держит огромной денежной подушки и имеет гораздо меньшие комиссии (0,45%г у FXGD на Московской бирже против 3–5%г у ПИФов). Самый рекомендуемый вариант для «бумажного» золота.</li>
-<li>Акции золотодобытчиков. Часто называются в качестве альтернативы, которая и инвестиция в золото, и дивиденды приносит. На российском рынке такой возможности нет, т.к. у нас их всего два и невозможно диверсифицировать операционные риски этих компаний. На зарубежном рынке можно приобрести ETF на мировую золотодобычу, чья доходность хорошо повторяет «золото + дивиденды».</li>
+<li>Акции золотодобытчиков. Часто называются в качестве альтернативы, которая и инвестиция в золото, и дивиденды приносит. На российском рынке это Полюс, Лензолото, Polymetal, Селигдар, Бурятзолото и Петропавловск. Особенность инвестирования в золото через акции золотодобытчиков в том, что хотя их фундаментальная динамика следует за ценами на золото, цена акций в моменте гораздо сильнее зависит от состояния конкретной компании, от настроения инвесторов к рынку конкретной страны и от отношения инвесторов к акциям в целом. Чтобы диверсифицировать эти риски, нужно покупать фонд на всю мировую золотодобычу, который на российском рынке недоступен, но даже и в этом случае вы, скорее всего, не сможете воспользоваться этим фондом для стабилизации портфеля в моменты мировых фондовых кризисов: акции золотодобытчиков всё-таки по своей динамике ближе к акциям, чем к золоту.</li>
 </ol>
-<p>Учитывая колоссальное перепроизводство золота, я рассчитываю, что в перспективе оно должно обесцениться в десятки раз и не держу его ни в каком виде. Желающим диверсификации в этом направлении я рекомендую рассмотреть ETF на корзины драгоценных металлов и/или биржевых товаров в целом, но на российском рынке их нет.</p>
+<h2 id="_3">Оптимальная доля золота в портфеле</h2>
+<p>Какую долю портфеля следует держать в золоте, если вы считаете, что в обозримой перспективе его роль и характерная динамика относительно других активов не изменится? Чтобы это определить, можно проанализировать на исторических данных риск и доходность портфелей из акций, облигаций и золота. Для этого я скорректировал исторические доходности к ожидаемым, оставив в неприкосновенности относительную динамику и волатильность, сгенерировал 50000 случайных портфелей, и получил следующую картину:</p>
+<p><img src=/literacy/instruments/eff_gold.svg style="width: 100%; height: 50wv" /></p>
+<p>Каждая точка — портфель, чем желтее — тем больше золота. В качестве меры риска я выбрал максимальное отставание портфеля от идеального при таком же распределении активов (который равномерно растёт с полученной для него ожидаемой доходностью), «лаг» в таблице. Как видно из графика, оптимальное соотношение риск/доходность достигается при доходности около 4%г.</p>
+<p>Оптимальные исторические портфели, т.е. с наименьшим риском при заданной доходности, получились такими:</p>
+<table>
+<thead>
+<tr>
+<th>%г</th>
+<th>ско</th>
+<th>лаг, %</th>
+<th>просадка, %</th>
+<th>акции</th>
+<th>золото</th>
+<th>облигации</th>
+<th>ден. рынок</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0</td>
+<td>0</td>
+<td>0</td>
+<td>100</td>
+</tr>
+<tr>
+<td>0.5</td>
+<td>0.5</td>
+<td>4.1</td>
+<td>3.4</td>
+<td>7</td>
+<td>2</td>
+<td>2</td>
+<td>89</td>
+</tr>
+<tr>
+<td>1.0</td>
+<td>1.3</td>
+<td>9.0</td>
+<td>8.4</td>
+<td>16</td>
+<td>6</td>
+<td>4</td>
+<td>75</td>
+</tr>
+<tr>
+<td>1.5</td>
+<td>1.8</td>
+<td>13.1</td>
+<td>11.6</td>
+<td>22</td>
+<td>8</td>
+<td>3</td>
+<td>66</td>
+</tr>
+<tr>
+<td>2.0</td>
+<td>2.6</td>
+<td>17.6</td>
+<td>16.7</td>
+<td>30</td>
+<td>12</td>
+<td>6</td>
+<td>51</td>
+</tr>
+<tr>
+<td>2.5</td>
+<td>3.4</td>
+<td>22.7</td>
+<td>20.8</td>
+<td>40</td>
+<td>16</td>
+<td>1</td>
+<td>42</td>
+</tr>
+<tr>
+<td>3.0</td>
+<td>3.9</td>
+<td>25.7</td>
+<td>24.4</td>
+<td>47</td>
+<td>19</td>
+<td>9</td>
+<td>25</td>
+</tr>
+<tr>
+<td>3.5</td>
+<td>4.7</td>
+<td>30.2</td>
+<td>27.9</td>
+<td>56</td>
+<td>22</td>
+<td>6</td>
+<td>16</td>
+</tr>
+<tr>
+<td>4.0</td>
+<td>5.5</td>
+<td>34.3</td>
+<td>32.6</td>
+<td>66</td>
+<td>26</td>
+<td>8</td>
+<td>0</td>
+</tr>
+<tr>
+<td>4.5</td>
+<td>6.1</td>
+<td>44.8</td>
+<td>36.9</td>
+<td>77</td>
+<td>21</td>
+<td>3</td>
+<td>0</td>
+</tr>
+<tr>
+<td>5.0</td>
+<td>6.8</td>
+<td>55.9</td>
+<td>48.8</td>
+<td>89</td>
+<td>11</td>
+<td>0</td>
+<td>0</td>
+</tr>
+<tr>
+<td>5.3</td>
+<td>7.5</td>
+<td>63.7</td>
+<td>57.5</td>
+<td>98</td>
+<td>1</td>
+<td>0</td>
+<td>0</td>
+</tr>
+</tbody>
+</table>
+<p><strong>ВНИМАНИЕ!</strong> Эти портфели — исторические, а данные по доходности и риску — агрегированные. В будущем эти портфели дадут <strong>другой</strong> результат. Модели, графики и таблицы, основанные на исторических данных, могут лишь подсказать примерную общую структуру портфеля и степень влияния его составляющих на результаты.</p>
+<h2 id="_4">Альтернативы золоту</h2>
+<h3 id="_5">Золотодобытчики</h3>
+<p>Проведём такой же анализ, но вместо золота возьмём глобальный индекс акций золотодобытчиков.</p>
+<p><img src=/literacy/instruments/gold_vs_miners.svg style="width: 100%; height: 50wv" />
+<details style="font-size: smaller; margin-top: -5ex"><summary>Источники</summary>Cклейка из <a href="https://mba.tuck.dartmouth.edu/pages/faculty/ken.french/data_library.html">данных Френча</a> (48 Industry Portfolios), <a href="https://www.longtermtrends.net/mining-stocks-vs-gold-and-silver/">индекса BGMI</a>, полной доходности <a href="https://finance.yahoo.com/quote/USERX?p=USERX">фонда USERX</a> (осторожно! в adjusted close у yahoo в 10 раз завышена дивдоходность из-за некорректного учёта сплита), скорректированной на комиссию, и полной доходности индекса <a href="https://www.investing.com/indices/daxglobal-gold-miners-usd-tr">DAX Global Gold Miners</a>.</summary></details></p>
+<p>Как видно, динамика индекса золотодобытчиков хорошо соответствует динамике золота, но также несёт и риски рынка акций. Так выглядит «ландшафт портфелей»:</p>
+<p><img src=/literacy/instruments/eff_miners.svg style="width: 100%; height: 50wv" /></p>
+<p>И оптимальные портфели:</p>
+<table>
+<thead>
+<tr>
+<th>%г</th>
+<th>ско</th>
+<th>лаг, %</th>
+<th>просадка, %</th>
+<th>акции</th>
+<th>золотодобытчики</th>
+<th>облигации</th>
+<th>ден. рынок</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0</td>
+<td>0</td>
+<td>0</td>
+<td>100</td>
+</tr>
+<tr>
+<td>0.5</td>
+<td>0.5</td>
+<td>3.4</td>
+<td>2.9</td>
+<td>5</td>
+<td>2</td>
+<td>1</td>
+<td>92</td>
+</tr>
+<tr>
+<td>1.0</td>
+<td>1.2</td>
+<td>7.0</td>
+<td>6.5</td>
+<td>11</td>
+<td>4</td>
+<td>0</td>
+<td>85</td>
+</tr>
+<tr>
+<td>1.5</td>
+<td>1.9</td>
+<td>10.8</td>
+<td>10.2</td>
+<td>19</td>
+<td>6</td>
+<td>1</td>
+<td>74</td>
+</tr>
+<tr>
+<td>2.0</td>
+<td>2.5</td>
+<td>14.1</td>
+<td>13.3</td>
+<td>25</td>
+<td>8</td>
+<td>0</td>
+<td>66</td>
+</tr>
+<tr>
+<td>2.5</td>
+<td>3.3</td>
+<td>17.9</td>
+<td>16.9</td>
+<td>32</td>
+<td>11</td>
+<td>0</td>
+<td>57</td>
+</tr>
+<tr>
+<td>3.0</td>
+<td>3.9</td>
+<td>21.7</td>
+<td>20.5</td>
+<td>37</td>
+<td>14</td>
+<td>0</td>
+<td>48</td>
+</tr>
+<tr>
+<td>3.5</td>
+<td>4.6</td>
+<td>25.1</td>
+<td>23.2</td>
+<td>47</td>
+<td>15</td>
+<td>2</td>
+<td>37</td>
+</tr>
+<tr>
+<td>4.0</td>
+<td>5.5</td>
+<td>28.6</td>
+<td>27.2</td>
+<td>54</td>
+<td>18</td>
+<td>0</td>
+<td>28</td>
+</tr>
+<tr>
+<td>4.5</td>
+<td>6.3</td>
+<td>32.9</td>
+<td>31.5</td>
+<td>60</td>
+<td>22</td>
+<td>0</td>
+<td>17</td>
+</tr>
+<tr>
+<td>5.0</td>
+<td>7.1</td>
+<td>35.9</td>
+<td>34.1</td>
+<td>69</td>
+<td>24</td>
+<td>1</td>
+<td>6</td>
+</tr>
+<tr>
+<td>5.5</td>
+<td>7.3</td>
+<td>55.0</td>
+<td>47.0</td>
+<td>89</td>
+<td>11</td>
+<td>0</td>
+<td>0</td>
+</tr>
+</tbody>
+</table>
+<p>Как видно, при замене золота на индекс акций мировой золотодобычи, можно получить те же доходности но при меньших рисках. Или увеличить максимальную доходность портфеля за счёт перевеса в сектор золотодобычи, всё так же с меньшими рисками. Что интересно, риск в смысле СКО доходностей при такой замене практически не изменяется, а вот максимальные просадка и отставание от целевой доходности снижаются почти на 10%.</p>
+<h2 id="_6">Корзина драгметаллов</h2>
+<p>Корзина драгметаллов вместо золота — для тех, кто хочет иметь в портфеле экспозицию на «реальные активы», но опасается, что золото в скором будущем потеряет свою прежнюю роль. Посмотрим на поведение корзины из золота, серебра, платины и палладия в равных долях (данные со <a href="https://stooq.com/t/?i=512">stooq</a>). Она оказывается гораздо более рискованным активом, чем просто золото:</p>
+<p><img src=/literacy/instruments/eff_metals.svg style="width: 100%; height: 50wv" /></p>
+<p>Поэтому допустимая её доля в портфеле получается гораздо меньше.</p>
+<table>
+<thead>
+<tr>
+<th>%г</th>
+<th>СКО</th>
+<th>Лаг, %</th>
+<th>Просадка, %</th>
+<th>акции</th>
+<th>драгмет</th>
+<th>облигации</th>
+<th>ден. рынок</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.1</td>
+<td>0.1</td>
+<td>0</td>
+<td>0</td>
+<td>0</td>
+<td>100</td>
+</tr>
+<tr>
+<td>0.5</td>
+<td>0.6</td>
+<td>5.0</td>
+<td>4.0</td>
+<td>6</td>
+<td>2</td>
+<td>6</td>
+<td>86</td>
+</tr>
+<tr>
+<td>1.0</td>
+<td>1.3</td>
+<td>10.8</td>
+<td>9.1</td>
+<td>14</td>
+<td>4</td>
+<td>15</td>
+<td>66</td>
+</tr>
+<tr>
+<td>1.5</td>
+<td>2.0</td>
+<td>15.8</td>
+<td>15.1</td>
+<td>22</td>
+<td>9</td>
+<td>22</td>
+<td>48</td>
+</tr>
+<tr>
+<td>2.0</td>
+<td>2.7</td>
+<td>21.0</td>
+<td>20.1</td>
+<td>28</td>
+<td>12</td>
+<td>33</td>
+<td>28</td>
+</tr>
+<tr>
+<td>2.5</td>
+<td>3.1</td>
+<td>25.8</td>
+<td>21.7</td>
+<td>36</td>
+<td>7</td>
+<td>36</td>
+<td>22</td>
+</tr>
+<tr>
+<td>3.0</td>
+<td>3.8</td>
+<td>29.8</td>
+<td>25.2</td>
+<td>43</td>
+<td>13</td>
+<td>44</td>
+<td>0</td>
+</tr>
+<tr>
+<td>3.5</td>
+<td>4.3</td>
+<td>38.2</td>
+<td>31.9</td>
+<td>54</td>
+<td>7</td>
+<td>38</td>
+<td>1</td>
+</tr>
+<tr>
+<td>4.0</td>
+<td>4.9</td>
+<td>46.3</td>
+<td>39.8</td>
+<td>65</td>
+<td>5</td>
+<td>30</td>
+<td>0</td>
+</tr>
+<tr>
+<td>4.5</td>
+<td>5.8</td>
+<td>54.5</td>
+<td>48.3</td>
+<td>79</td>
+<td>7</td>
+<td>14</td>
+<td>0</td>
+</tr>
+<tr>
+<td>5.0</td>
+<td>6.7</td>
+<td>62.4</td>
+<td>56.3</td>
+<td>92</td>
+<td>2</td>
+<td>6</td>
+<td>0</td>
+</tr>
+<tr>
+<td>5.2</td>
+<td>7.2</td>
+<td>65.7</td>
+<td>59.9</td>
+<td>99</td>
+<td>1</td>
+<td>0</td>
+<td>0</td>
+</tr>
+</tbody>
+</table>
+<h2 id="_7">Корзина биржевых товаров</h2>
+<p>Оказывается ещё более рискованным активом, чем корзина драгметаллов, и места в исторически оптимальных портфелях ей вовсе не остаётся. В качестве исходных данных был взят <a href="https://www.investing.com/indices/sp-gsci-commodity-total-return-historical-data">S&amp;P GSCI Commodity Total Return Index</a>.</p>
     </div>
     <aside>
         <div style="display: flex; flex-direction: column; text-align: right;">
@@ -102,7 +544,7 @@
     </main>
 
     <footer>
-<div class="prevupnext"><a class="prev" href="/literacy/instruments/bonds"> &lt;&lt; Облигации </a><a class="up" href="/literacy"> &uarr; Грамотность &uarr; </a><a class="next" href="/literacy/instruments/realty"> Недвижимость &gt;&gt; </a></div>
+
 
         <div class="disclaimer">
             <p>Здесь я выкладываю лишь собственные размышления/исследования/расчёты, иногда собственное же изложение чужих мнений или результатов исследований. Размещённая информация может содержать ошибки, быть неактуальной на момент прочтения, допускать множество интерпретаций и проч. Я не занимаюсь образовательной деятельностью и не даю инвестиционных рекомендаций ни на этом сайте, ни в частном порядке.</p>
