--- a/literacy/instruments/gold.html
+++ b/literacy/instruments/gold.html
@@ -9,11 +9,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="/style.css" />
     <link href="/feed.atom.xml" type="application/atom+xml" rel="alternate" title="Житейские воззрения пана Семушельского Atom Feed" />
-        <meta name="description" content="Виды, специфика, риски и доходность вложений в золото." />
+        <meta name="description" content="Виды, специфика, риски и доходность вложений в золото. Место золота в инвестиционном портфеле. Альтернативы золоту." />
         <meta name="keywords" content="финансовая грамотность, инструменты сбережения, золото, риски, доходность" />
 
 <meta property="og:locale" content="ru" />
-    <meta property="og:description" content="Виды, специфика, риски и доходность вложений в золото." />
+    <meta property="og:description" content="Виды, специфика, риски и доходность вложений в золото. Место золота в инвестиционном портфеле. Альтернативы золоту." />
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2020-01-04" />
         <meta property="og:article:modified_time" content="2020-10-09" />
@@ -53,7 +53,7 @@
     <header>
         <h1>Золото</h1>
         <div class="meta">
-                <p class="description">Виды, специфика, риски и доходность вложений в золото.</p>
+                <p class="description">Виды, специфика, риски и доходность вложений в золото. Место золота в инвестиционном портфеле. Альтернативы золоту.</p>
                 <p> Обновлено: <time>2020-10-09</time> </p>
 
         </div>
@@ -67,10 +67,10 @@
 <li><a href="#_3">Оптимальная доля золота в портфеле</a></li>
 <li><a href="#_4">Альтернативы золоту</a><ul>
 <li><a href="#_5">Золотодобытчики</a></li>
-</ul>
-</li>
 <li><a href="#_6">Корзина драгметаллов</a></li>
 <li><a href="#_7">Корзина биржевых товаров</a></li>
+</ul>
+</li>
 </ul>
 </div>
 <h2 id="_1">Производство, потребление и историческая динамика</h2>
@@ -100,7 +100,7 @@
 <h2 id="_3">Оптимальная доля золота в портфеле</h2>
 <p>Какую долю портфеля следует держать в золоте, если вы считаете, что в обозримой перспективе его роль и характерная динамика относительно других активов не изменится? Чтобы это определить, можно проанализировать на исторических данных риск и доходность портфелей из акций, облигаций и золота. Для этого я скорректировал исторические доходности к ожидаемым, оставив в неприкосновенности относительную динамику и волатильность, сгенерировал 50000 случайных портфелей, и получил следующую картину:</p>
 <p><img src=/literacy/instruments/eff_gold.svg style="width: 100%; height: 50wv" /></p>
-<p>Каждая точка — портфель, чем желтее — тем больше золота. В качестве меры риска я выбрал максимальное отставание портфеля от идеального при таком же распределении активов (который равномерно растёт с полученной для него ожидаемой доходностью), «лаг» в таблице. Как видно из графика, оптимальное соотношение риск/доходность достигается при доходности около 4%г.</p>
+<p>Каждая точка — портфель, чем желтее — тем больше золота. Доходность — медианная на 15-летнем скользящем окне. В качестве меры риска я выбрал максимальное на этом окне отставание портфеля от идеального при таком же распределении активов (который равномерно растёт с полученной для него ожидаемой доходностью), «лаг» в таблице. Как видно из графика, оптимальное соотношение риск/доходность достигается при доходности около 4%г.</p>
 <p>Оптимальные исторические портфели, т.е. с наименьшим риском при заданной доходности, получились такими:</p>
 <table>
 <thead>
@@ -384,7 +384,8 @@
 </tbody>
 </table>
 <p>Как видно, при замене золота на индекс акций мировой золотодобычи, можно получить те же доходности но при меньших рисках. Или увеличить максимальную доходность портфеля за счёт перевеса в сектор золотодобычи, всё так же с меньшими рисками. Что интересно, риск в смысле СКО доходностей при такой замене практически не изменяется, а вот максимальные просадка и отставание от целевой доходности снижаются почти на 10%.</p>
-<h2 id="_6">Корзина драгметаллов</h2>
+<p>Хотя если с сомнением относитесь к будущему золота (как я), то и от золотодобытчиков ничего хорошего не ждите. Хотя, как правило, эти компании работают ещё с какими-либо металлами, более нужными человечеству. Про них — следующий раздел.</p>
+<h3 id="_6">Корзина драгметаллов</h3>
 <p>Корзина драгметаллов вместо золота — для тех, кто хочет иметь в портфеле экспозицию на «реальные активы», но опасается, что золото в скором будущем потеряет свою прежнюю роль. Посмотрим на поведение корзины из золота, серебра, платины и палладия в равных долях (данные со <a href="https://stooq.com/t/?i=512">stooq</a>). Она оказывается гораздо более рискованным активом, чем просто золото:</p>
 <p><img src=/literacy/instruments/eff_metals.svg style="width: 100%; height: 50wv" /></p>
 <p>Поэтому допустимая её доля в портфеле получается гораздо меньше.</p>
@@ -524,13 +525,13 @@
 </tr>
 </tbody>
 </table>
-<h2 id="_7">Корзина биржевых товаров</h2>
+<h3 id="_7">Корзина биржевых товаров</h3>
 <p>Оказывается ещё более рискованным активом, чем корзина драгметаллов, и места в исторически оптимальных портфелях ей вовсе не остаётся. В качестве исходных данных был взят <a href="https://www.investing.com/indices/sp-gsci-commodity-total-return-historical-data">S&amp;P GSCI Commodity Total Return Index</a>.</p>
     </div>
     <aside>
         <div style="display: flex; flex-direction: column; text-align: right;">
         <div class="share-buttons">
-            <a href="https://vk.com/share.php?url=https://onfin.github.io/literacy/instruments/gold&title=Золото&description=Виды, специфика, риски и доходность вложений в золото." target="_blank"><i class="share">&#xea9d;</i></a>
+            <a href="https://vk.com/share.php?url=https://onfin.github.io/literacy/instruments/gold&title=Золото&description=Виды, специфика, риски и доходность вложений в золото. Место золота в инвестиционном портфеле. Альтернативы золоту." target="_blank"><i class="share">&#xea9d;</i></a>
             <a href="https://t.me/share/url?url=https://onfin.github.io/literacy/instruments/gold" target="_blank"><i class="share">&#xea9b;</i></a>
             <a href="https://twitter.com/intent/tweet?text=https://onfin.github.io/literacy/instruments/gold" target="_blank"><i class="share">&#xea9c;</i></a>
             <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/literacy/instruments/gold" target="_blank"><i class="share">&#xea93;</i></a>
