--- a/literacy/instruments/gold.html
+++ b/literacy/instruments/gold.html
@@ -16,7 +16,7 @@
     <meta property="og:description" content="Виды, специфика, риски и доходность вложений в золото. Место золота в инвестиционном портфеле. Альтернативы золоту." />
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2020-01-04" />
-        <meta property="og:article:modified_time" content="2020-10-09" />
+        <meta property="og:article:modified_time" content="2020-10-10" />
 <meta property="og:title" content="Золото" />
 <meta property="og:url" content="https://onfin.github.io/literacy/instruments/gold" />
 
@@ -54,7 +54,7 @@
         <h1>Золото</h1>
         <div class="meta">
                 <p class="description">Виды, специфика, риски и доходность вложений в золото. Место золота в инвестиционном портфеле. Альтернативы золоту.</p>
-                <p> Обновлено: <time>2020-10-09</time> </p>
+                <p> Обновлено: <time>2020-10-10</time> </p>
 
         </div>
     </header>
@@ -91,7 +91,7 @@
 <li>Инвестиционные монеты. Ситуация примерно такая же как и со слитками, но покупка-продажа монет не облагается НДС. Также, монета может иметь некоторую коллекционную ценность и получить дополнительную «наценку» к цене золота в монете. Так что это более предпочительный способ сбережений, чем слитки (хотя монеты стоят обычно от 15Кр), хотя уплаченная при покупке «коллекционная наценка» может к моменту продажи и испариться. У небанковских организаций обычно лучше условия по покупке-продаже монет, чем у банков.</li>
 <li>Коллекционные монеты. Их цена больше зависит от предполагаемой коллекционной ценности, чем от стоимости металла (хотя и не может быть ниже её). Если вы не занимаетесь этим профессионально — рискуете сильно переплатить и остаться в убытке.</li>
 <li>Обезличенный металлический счёт (ОМС). Открывается в банке и на него зачисляются виртуальные граммы металла. Нет НДС, можно покупать очень дробное количество металла, мгновенная покупка-продажа онлайн, иногда даже начисление процентов, но! Вы привязаны к банку, который может установить произвольные курсы покупки-продажи металла по ОМС и у вас нет возможности продать свой металл в другом месте. А также эти счета не застрахованы в АСВ.</li>
-<li>Покупка золота на бирже. Такой же виртуальный счёт в единицах металла вы можете иметь не только в банке, но и в своём биржевом портфеле (позиция, как и права на ценные бумаги, будет учитываться в НРД). Проценты по нему, разумеется, на начисляются, зато можно покупать и продавать по биржевой цене, а не по той, которую захочет установить банк. Понятно, что в момент кризиса покупателей может и не найтись (равно как и банк может установить смехотворную цену покупки или тоже перестать проводить операции с ОМС). Правда, доступно это у очень небольшого количества брокеров и надо очень внимательно смотреть тарифы.</li>
+<li>Покупка золота на бирже. Такой же виртуальный счёт в единицах металла вы можете иметь не только в банке, но и в своём биржевом портфеле (позиция, как и права на ценные бумаги, будет учитываться в НРД). Проценты по нему, разумеется, не начисляются, зато можно покупать и продавать по биржевой цене, а не по той, которую захочет установить банк. Понятно, что в момент кризиса покупателей может и не найтись (равно как и банк может установить смехотворную цену покупки или тоже перестать проводить операции с ОМС). Правда, доступно это у очень небольшого количества брокеров и надо очень внимательно смотреть тарифы.</li>
 <li>Покупка фьючерсного контракта на срочном рынке. Вы «договариваетесь» купить золото в будущем (в дату <em>экспирации</em>) по сегодняшней цене фьючерса. От вас потребуется зарезервировать на счёте примерно 10% от стоимости контракта (<em>гарантийное обеспечение, ГО</em>), но каждый день ваш счёт будет ежедневно изменяться как будто вы уже купили это золото по оговорённой цене и тут же продали по текущей. После экспирации контракт будет списан и счёт изменяться перестанет. Вам необходимо следить, чтобы вовремя довнести нужную сумму денег для поддержания нужного уровня ГО (а ещё сама биржа, при сильных колебаниях цены может изменить этот уровень с обычных 10% до 20 или даже 30) и компенсации падения цены. Было бы простым решением держать на счёте всю стоимость «фьючерсного» золота, однако начальная цена определяется с учётом стоимости денег (заплатите-то вы потом) т.е. вы должны на всю сумму контракта получать процент не ниже ключевой ставки, чтобы не потерять свои деньги на т.н. <em>распаде временно́й стомости</em>. Также, в стоимость фьючерса уже заложено ожидание роста/падения цены к моменту его экспирации, поэтому, если ожидания оправдываются, вы получаете меньшую прибыль или меньший убыток по сравнению с владением реальным золотом, а если не оправдываются — наоборот: бо́льшую прибыль или бо́льший убыток.</li>
 <li>Покупка паёв ПИФа на золото. Управляющая компания в обмен на ваши деньги купит и разместит в специальном хранилище или физическое золото, или паи другого фонда на золото, или заключит договоры, которые обеспечат изменение стоимости вашего вложения аналогично изменению цены на золото. Проблемы российских ПИФов: формально могут инвестировать во что угодно, а не во что обещали, особенности работы заставляют держать 10–15% активов в деньгах, а не в желаемом инструменте, <a href="https://fintraining.livejournal.com/791661.html">огромные комиссии и отвратительное качество управления</a>.</li>
 <li>Покупка ETF на золото. Аналогично ПИФу, но паи торгуются на рынке ⇒ справедливая рыночная цена и минимальный спред между ценами покупки и продажи; ETF лучше регулируется чем ПИФ (и биржевой ПИФ), не держит огромной денежной подушки и имеет гораздо меньшие комиссии (0,45%г у FXGD на Московской бирже против 3–5%г у ПИФов). Самый рекомендуемый вариант для «бумажного» золота.</li>
@@ -393,9 +393,9 @@
 <thead>
 <tr>
 <th>%г</th>
-<th>СКО</th>
-<th>Лаг, %</th>
-<th>Просадка, %</th>
+<th>ско</th>
+<th>лаг, %</th>
+<th>просадка, %</th>
 <th>акции</th>
 <th>драгмет</th>
 <th>облигации</th>
