--- a/literacy/fund_selection/index.html
+++ b/literacy/fund_selection/index.html
@@ -9,13 +9,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="/style.css" />
     <link href="/feed.atom.xml" type="application/atom+xml" rel="alternate" title="Житейские воззрения пана Семушельского Atom Feed" />
-        <meta name="description" content="Как выбирать инвестиционные фонды. Основные количественные и качественные характеристики, которые определяют ожидаемую доходность и дополнительные риски." />
+        <meta name="description" content="Как выбирать индексные инвестиционные фонды. Основные количественные и качественные характеристики, которые определяют ожидаемую доходность и дополнительные риски." />
         <meta name="keywords" content="финансовая грамотность, инвестиционные фонды, индексные фонды, ETF, БПИФ, комиссии, TER, ошибка отслеживания, tracking error, скорость отставания, tracking difference," />
 
 <meta property="og:locale" content="ru" />
-    <meta property="og:description" content="Как выбирать инвестиционные фонды. Основные количественные и качественные характеристики, которые определяют ожидаемую доходность и дополнительные риски." />
+    <meta property="og:description" content="Как выбирать индексные инвестиционные фонды. Основные количественные и качественные характеристики, которые определяют ожидаемую доходность и дополнительные риски." />
     <meta property="og:type" content="article" />
-        <meta property="og:article:modified_time" content="2020-11-02" />
+        <meta property="og:article:modified_time" content="2020-11-05" />
 <meta property="og:title" content="Выбор индексных фондов" />
 <meta property="og:url" content="https://onfin.github.io/literacy/fund_selection" />
 
@@ -52,8 +52,8 @@
     <header>
         <h1>Выбор индексных фондов</h1>
         <div class="meta">
-                <p class="description">Как выбирать инвестиционные фонды. Основные количественные и качественные характеристики, которые определяют ожидаемую доходность и дополнительные риски.</p>
-                <p> Обновлено: <time>2020-11-02</time> </p>
+                <p class="description">Как выбирать индексные инвестиционные фонды. Основные количественные и качественные характеристики, которые определяют ожидаемую доходность и дополнительные риски.</p>
+                <p> Обновлено: <time>2020-11-05</time> </p>
 
         </div>
     </header>
@@ -73,6 +73,7 @@
 <li><a href="#_7">Размер и время жизни фонда</a></li>
 <li><a href="#_8">Страна регистрации, налогообложение дивидендов</a></li>
 <li><a href="#_9">Выплата дивидендов</a></li>
+<li><a href="#_10">Как же выбрать?</a></li>
 </ul>
 </div>
 <h2 id="_1">Базовый индекс, бенчмарк и активные фонды</h2>
@@ -187,7 +188,7 @@ c-8,0,-12,-0.7,-12,-2z M1001 80
 h400000v40h-400000z'/></svg></span></span></span><span class="vlist-s">​</span></span><span class="vlist-r"><span class="vlist" style="height:0.788405em;"><span></span></span></span></span></span><span class="mspace" style="margin-right:0.2777777777777778em;"></span><span class="mrel">≈</span><span class="mspace" style="margin-right:0.2777777777777778em;"></span></span><span class="base"><span class="strut" style="height:0.94444em;vertical-align:-0.19444em;"></span><span class="mord">2</span><span class="mpunct">,</span><span class="mspace" style="margin-right:0.16666666666666666em;"></span><span class="mord">6</span><span class="mord">9</span><span class="mord">%</span></span></span></span></span></span></p>
 <p>В этом случае неизвестные фактические расходы фонда, налоги с дивидендов и прочие косвенные издержки пайщиков учитываются в среднем отклонении <span><span class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.8833300000000001em;vertical-align:0em;"></span><span class="mord overline"><span class="vlist-t"><span class="vlist-r"><span class="vlist" style="height:0.8833300000000001em;"><span style="top:-3em;"><span class="pstrut" style="height:3em;"></span><span class="mord"><span class="mord">Δ</span><span class="mord mathnormal" style="margin-right:0.02778em;">r</span></span></span><span style="top:-3.80333em;"><span class="pstrut" style="height:3em;"></span><span class="overline-line" style="border-bottom-width:0.04em;"></span></span></span></span></span></span></span></span></span></span> (которое эквивалентно средней скорости отставания), а необъяснённое им расхождение с индексом уже относится на ошибку отслеживания.</p>
 <h2 id="_3">Средняя накопленная ошибка отслеживания</h2>
-<p>У предыдущих двух, «официально признанных», характеристик есть один фундаментальный изъян: игнорирование риска последовательности исходов (<em>sequence risk</em>). Предположим, у нас очередной кризис, рынки лихорадит, и у двух фондов получаются следующие разницы в доходностях с индексом.</p>
+<p>У предыдущих двух, «официально признанных», характеристик есть один фундаментальный изъян: игнорирование риска последовательности исходов (<em>sequence risk</em>). Предположим, у двух фондов получаются следующие разницы в доходностях с индексом.</p>
 <table>
 <p><thead><tr ><th > День </th><th > Фонд А, % </th><th > Фонд Б, % </th></tr></thead><tbody><tr ><td > 1 </td><td > -0,5    </td><td > -0,6   </td></tr><tr ><td > 2 </td><td > -0,6    </td><td > 0,5    </td></tr><tr ><td > 3 </td><td > -0,3    </td><td > -0,42   </td></tr><tr ><td > 4 </td><td > 0,5    </td><td > 0,52 </td></tr><tr ><td > 5 </td><td > 0,5   </td><td >-0,45 </td></tr><tr ><td > 6 </td><td >0,5   </td><td > 0,45 </td></tr></tbody></p>
 </table>
@@ -258,7 +259,7 @@ h400000v40h-400000z'/></svg></span></span></span><span class="vlist-s">​</span
 <h2 id="_7">Размер и время жизни фонда</h2>
 <p>Оценивается по размеру совокупных чистых активов. У маленьких фондов высок риск закрытия и, часто, выше комиссии (хотя в США это не так: старые крупные фонды дороже молодых и мелких). Маленькие БПИФы, в силу несовершенного механизма выпуска/погашения паёв, в общем случае, также страдают от высокой ошибки отслеживания и скорости отставания: потери на торговых операциях отнимают бо́льшую долю от СЧА. В ETF эти потери несёт сторонняя организация и пайщиков фонда они практически не затрагивают.</p>
 <p>С другой стороны, у крупных фондов гораздо выше косвенные потери на спредах и отсутствия необходимой ликвидности при ребалансировках. Для примера можно посмотреть на <a href="https://indexera.io/funds/9294807">VIOO и IJR</a>: комиссия первого почти в два раза выше (0,10%г против 0,06%г у IJR), но и доходность выше на 0,05%, если смотреть на последние 3 года.</p>
-<p>Многие фонды на самом деле больше, чем кажется. Когда вы смотрите информацию по какому-то ETF, вы видите СЧА, которые относятся только к паям этого ETF. Однако общие активы фонда могут быть распределены между несколькими ETF (например, выпущенных для обращения на разных рынках, выплачивающих и реинвестирующих дивиденды).</p>
+<p>Многие фонды на самом деле больше, чем кажутся. Когда вы смотрите информацию по какому-то ETF, вы видите СЧА, которые относятся только к паям этого ETF. Однако общие активы фонда могут быть распределены между несколькими ETF (например, выпущенных для обращения на разных рынках, выплачивающих и реинвестирующих дивиденды), и даже несколькими формами вложений (например, ETF и mutual fund).</p>
 <p>Чем дольше фонд существует, тем меньше риски его закрытия (если это индексный фонд, если активный — скорее выше т.к. даже работавшие в прошлом стратегии имеют тенденцию со временем ломаться и разочаровывать инвесторов).</p>
 <h2 id="_8">Страна регистрации, налогообложение дивидендов</h2>
 <p>Страна регистрации влияет на некоторые особенности регулирования деятельности фонда (отличие БПИФ от ETF мы уже рассмотрели, могут быть и другие нюансы), геополитические риски для граждан РФ по владению паями этого фонда, но самое важное — это налогообложение дивидендов, купонов и прочих выплат. Основные идеи следующие:</p>
@@ -276,17 +277,27 @@ h400000v40h-400000z'/></svg></span></span></span><span class="vlist-s">​</span
 <p>Также надо иметь в виду, что при наследовании американского брокерского счёта, США хотят получить с наследников <a href="https://www.law.cornell.edu/uscode/text/26/subtitle-B/chapter-11/subchapter-B">налог</a> вплоть до 40% со стоимости кэша и американских активов на этом счёте свыше 60К$.</p>
 <h2 id="_9">Выплата дивидендов</h2>
 <p>Практически все российские БПИФы дивиденды реинвестирую внутри себя. Американские фонды обязаны выплачивать. Европейские же фонды, как правило, доступны как с реинвестированием дивидендов, так и с выплатой.</p>
-<p>Реинвестирование или выплата дивидендов сама по себе никак не влияет на эффективность фонда. Вся разница в том, в какой именно момент и в каком размере вы будете платить налоги на эти дивиденды.</p>
+<p>Реинвестирование или выплата дивидендов сама по себе никак не влияет на эффективность фонда. Вся разница в том, в какой именно момент и в каком размере вы будете платить налоги на эти дивиденды:</p>
 <ul>
-<li>Если вы планируете денежный поток не реинвестировать, а расходовать прямо сейчас, то лучше выбирать выплачивающие фонды. Но реинвестировать вы сможете только сумму, уменьшенную на налог (даже если сам фонд её не удерживает, придётся декларировать и доплачивать), что в долгосрочной перспективе выливается в большие потери.</li>
-<li>Если денежный поток не нужен, лучше выбирать реинвестирующие. Но при продаже паёв для покрытия текущих нужд придётся пожертвовать большей суммой налога: прибыль при продаже актива рассчитывается с наиболее ранних сделок, поэтому, при отсутствии ЛДВ, размер налоговой базы может приближаться к полной сумме сделки.</li>
+<li>в момент их получения от выплачивающего фонда (даже если сам фонд налог не удерживает, придётся декларировать и доплачивать), тогда реинвестировать получится меньшую сумму, что в долгосрочной перспективе выливается в большие потери;</li>
+<li>при продаже паёв реинвестирующего фонда, стоимость которых будет включать причисленные дивиденды и результаты их реинвестирования.</li>
 </ul>
-<p>Наиболее выгодный вариант можно определить только индивидуальным расчётом, точно зная будущие пополнения и изъятия, применимость ЛДВ и комиссии фондов.</p>
+<p>При прочих равных <em>всегда</em> выгоднее покупать паи реинвестирующих фондов (если вы можете терпеть психологический дискомфорт от продажи паёв на просадках). При получении дивидендов ваша налоговая база всегда будет равна полной сумме дивидендов. При продаже паёв на сумму, равную причисленным дивидендам, налоговая база будет <em>уменьшена</em> на стоимость покупки этих паёв. Т.к. сделки учитываются начиная с самых ранних, эта налоговая база будет <em>стремиться</em> к сумме сделки (= размеру дивидендов), но всегда будет меньше.</p>
+<h2 id="_10">Как же выбрать?</h2>
+<p>К этому моменту у многих, наверное, уже голова пошла кругом от множества характеристик и нюансов. Поэтому прилагаю примерный алгоритм.</p>
+<ol>
+<li>Определитесь с классом/подклассом активов.</li>
+<li>Ограничьте круг поиска доступными вам инструментами. Например, не надо смотреть на иностранные фонды, если вы не можете их купить.</li>
+<li>Исключите заведомо дорогие и высокорискованные формы вложений: ПИФы, ETN, ETC, Commodity pools, активно-управляемые фонды, фонды с синтетической репликацией с передачей активов.</li>
+<li>Выберите 5–6 фондов с наименьшей скоростью отставания от индекса (если она оказывается меньше комиссии, считайте комиссию за скорость отставания) и 5–6 фондов с наименьшей средней накопленной ошибкой отслеживания. Фонды со скоростью отставания больше 1,2%г и ошибкой отслеживания больше 1% исключайте.</li>
+<li>Оставьте только те фонды, которые вошли в обе группы лидеров.</li>
+<li>Выберите тот, скорость отставания которого минимальна (предполагается, что отставание выплачивающих фондов посчитано с учётом уплаты налога и расходов на реинвестирование).</li>
+</ol>
     </div>
     <aside>
         <div style="display: flex; flex-direction: column; text-align: right;">
         <div class="share-buttons">
-            <a href="https://vk.com/share.php?url=https://onfin.github.io/literacy/fund_selection&title=Выбор индексных фондов&description=Как выбирать инвестиционные фонды. Основные количественные и качественные характеристики, которые определяют ожидаемую доходность и дополнительные риски." target="_blank"><i class="share">&#xea9d;</i></a>
+            <a href="https://vk.com/share.php?url=https://onfin.github.io/literacy/fund_selection&title=Выбор индексных фондов&description=Как выбирать индексные инвестиционные фонды. Основные количественные и качественные характеристики, которые определяют ожидаемую доходность и дополнительные риски." target="_blank"><i class="share">&#xea9d;</i></a>
             <a href="https://t.me/share/url?url=https://onfin.github.io/literacy/fund_selection" target="_blank"><i class="share">&#xea9b;</i></a>
             <a href="https://twitter.com/intent/tweet?text=https://onfin.github.io/literacy/fund_selection" target="_blank"><i class="share">&#xea9c;</i></a>
             <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/literacy/fund_selection" target="_blank"><i class="share">&#xea93;</i></a>
