fund_selection update

--- a/literacy/fund_selection/index.html
+++ b/literacy/fund_selection/index.html
@@ -9,13 +9,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="/style.css" />
     <link href="/feed.atom.xml" type="application/atom+xml" rel="alternate" title="Житейские воззрения пана Семушельского Atom Feed" />
-        <meta name="description" content="Как выбирать индексные инвестиционные фонды. Основные количественные и качественные характеристики, которые определяют ожидаемую доходность и дополнительные риски." />
+        <meta name="description" content="Как правильно рассчитать и сравнить основные характеристики индексных фондов. Почему нельзя опираться на цифры из отчётности фондов. Какие бывают типы фондов, чем различаются между собой различные способы репликации и каковы их риски. Прочие факторы, влияющие на выбор фондов." />
         <meta name="keywords" content="финансовая грамотность, инвестиционные фонды, индексные фонды, ETF, БПИФ, комиссии, TER, ошибка отслеживания, tracking error, скорость отставания, tracking difference," />
 
 <meta property="og:locale" content="ru" />
-    <meta property="og:description" content="Как выбирать индексные инвестиционные фонды. Основные количественные и качественные характеристики, которые определяют ожидаемую доходность и дополнительные риски." />
+    <meta property="og:description" content="Как правильно рассчитать и сравнить основные характеристики индексных фондов. Почему нельзя опираться на цифры из отчётности фондов. Какие бывают типы фондов, чем различаются между собой различные способы репликации и каковы их риски. Прочие факторы, влияющие на выбор фондов." />
     <meta property="og:type" content="article" />
-        <meta property="og:article:modified_time" content="2020-11-29" />
+        <meta property="og:article:published_time" content="2020-11-30" />
+        <meta property="og:article:modified_time" content="2020-11-30" />
 <meta property="og:title" content="Выбор индексных фондов" />
 <meta property="og:url" content="https://onfin.github.io/literacy/fund_selection" />
 
@@ -52,8 +53,8 @@
     <header>
         <h1>Выбор индексных фондов</h1>
         <div class="meta">
-                <p class="description">Как выбирать индексные инвестиционные фонды. Основные количественные и качественные характеристики, которые определяют ожидаемую доходность и дополнительные риски.</p>
-                <p> Обновлено: <time>2020-11-29</time> </p>
+                <p class="description">Как правильно рассчитать и сравнить основные характеристики индексных фондов. Почему нельзя опираться на цифры из отчётности фондов. Какие бывают типы фондов, чем различаются между собой различные способы репликации и каковы их риски. Прочие факторы, влияющие на выбор фондов.</p>
+                <p> Обновлено: <time>2020-11-30</time> </p>
 
         </div>
     </header>
@@ -217,6 +218,7 @@ c-4-3.333-8.333-7.667-13 -13l-13-13l77-155 77-156c66 199.333 139 419.667
 <p>Фонды могут менять отслеживаемый индекс, способ репликации, управляющую компанию, депозитарий, правила управления и т.д. Если такое изменение произошло, все предыдущие результаты фонда оказываются не актуальны и их необходимо отбросить. Но даже для стабильных фондов едва ли разумно использовать для расчёта данные старше 3–5 лет: они, скорее всего, уже не соответствуют текущим условиям работы фонда (как минимум, фонд значительно вырос и у него возросли потери на торговых операциях). Слишком короткая же история, с одной стороны, содержит мало «рыночных событий», чтобы адекватно оценить способность фонда отслеживать свой индекс в широком диапазоне условий, а с другой — придаёт слишком большой вес незначительным отклонениям (если история меньше года).</p>
 <p>Также все фонды необходимо сравнивать на одном и том же промежутке времени. Потому что наибольшее отставание и наибольшая ошибка отслеживания, как правило, приходится на периоды высокой волатильности на рынках. Скорость отставания и ошибка отслеживания усредняются по всему интервалу расчёта. Поэтому если сравнивать фонды, основываясь на всей доступной для каждого истории, без приведения к общему интервалу, вес «спокойных» и «бурных» периодов у каждого фонда окажется разный, и сравнивать рассчитанные показатели будет нельзя. Потому что нельзя будет сказать, обсуловлены ли лучшие характеристики действительно качеством работы фонда, или тем, что продолжительность спокойных периодов в его истории оказалась больше.</p>
 <p>Ещё один нюанс связан с правильным выбором индексов. Даже если фонды отслеживают один и тот же набор активов, некоторые из них в качестве бенчмарка могут указать индекс, учитывающий налогообложение дивидендов, а фидерные фонды (см. далее) — вообще стоимость пая своих мастер-фондов. Сравнение качества отслеживания таких разных бенчмарков не имеет смысла. Ведь в этом случае ни скорость отставания, ни ошибка отслеживания не скажут инвестору ни сколько он недополучит по сравнению со своим целевым индексом, ни насколько он рискует получить иную динамику. Поэтому результаты фонда нужно соотносить не с заявленным бенчмарком этого фонда, а с целевым индексом инвестора (который должен быть индексом полной доходности брутто, и состоять из тех же активов, в которые инвестирует фонд).</p>
+<p>Фонды с валютным хеджем часто используют как бенчмарк индекс в основной валюте. Это некорректно, т.к. валютное хеджирование предполагает уплату/получение премии в размере разницы безрисковых ставок. Взять для примера FXMM, который отслеживает индекс полной доходности векселей американского казначейства, но в рублях. Вы не ждёте от него такой же доходности, как по американским векселям, но в рублях (т.е. 0,25%г). В рублях вы ждёте доходность американских векселей + разницу ключевых ставок ЦБ и ФРС (или разницу overnight ставок на межбанковском рынке, что корректнее, но сложнее). Поэтому для фондов с хеджированием нужно использовать бенчмарк, учитывающий это дополнительную премию.</p>
 <p>Сравниваемые фонды могут находиться в разных юрисдикциях и как выплачивать, так и реинвестировать дивиденды. Чтобы корректно их сравнить, нужно динамику выплачивающего фонда считать с учётом налогообложения дивидендов по вашей ставке НДФЛ и расходов на реинвестирование. Тогда расходы на реинвестирование дивидендов будут учтены в скорости отставания всех фондов.</p>
 <p>На некоторые подклассы активов существует множество индексов. Например, для US Small Caps это S&amp;P Small Cap 600, Russell 2000, CRSP US Small Cap, и др. Сравнивать по качеству отслеживания фонды на разные индексы одного подкласса активов — можно. Из эффективности рынков следует, что ожидаемые долгосрочные доходности и реакция на макроэкономические события и тенденции у этих индексов будут примерно одинаковы, но одни индексы могут быть удобнее и дешевле для отслеживания, чем другие (например, из-за меньшей оборачиваемости). Потери на отставании от «правильного» индекса в одном подклассе активов будут, скорее всего, выше, чем от выбора «неправильного» с меньшими потерями.</p>
 <p>Здесь же хотел бы предостеречь от выбора целевого индекса в подклассе активов по его прошлой доходности (или даже коэффициенту Шарпа). Отклонения доходностей разных индексов в одном подклассе друг от друга (если речь не идёт об активных индексах: факторных, дивидендных, активно-управляемых и пр.), как правило, более-менее случайны, и выбор более доходного в прошлом, но хуже отслеживаемого индекса, скорее всего, будет ошибкой.</p>
@@ -294,21 +296,23 @@ c-4-3.333-8.333-7.667-13 -13l-13-13l77-155 77-156c66 199.333 139 419.667
 <li>при продаже паёв реинвестирующего фонда, стоимость которых будет включать причисленные дивиденды и результаты их реинвестирования.</li>
 </ul>
 <p>При прочих равных <em>всегда</em> выгоднее покупать паи реинвестирующих фондов (если вы можете терпеть психологический дискомфорт от продажи паёв на просадках). При получении дивидендов ваша налоговая база всегда будет равна полной сумме дивидендов. При продаже паёв на сумму, равную причисленным дивидендам, налоговая база будет <em>уменьшена</em> на стоимость покупки этих паёв. Т.к. сделки учитываются начиная с самых ранних, эта налоговая база будет <em>стремиться</em> к сумме сделки (= размеру дивидендов), но всегда будет меньше.</p>
+<p>Определить свой дивидендный доход в реинвестирующем фонде довольно просто: стоимость фонда в конце года – (стоимость фонда в начале года × доходность его <em>ценового</em> бенчмарка за год).</p>
 <h2 id="_10">Как же выбрать?</h2>
 <p>К этому моменту у многих, наверное, уже голова пошла кругом от множества характеристик и нюансов. Поэтому прилагаю примерный алгоритм.</p>
 <ol>
 <li>Определитесь с классом/подклассом активов.</li>
 <li>Ограничьте круг поиска доступными вам инструментами. Например, не надо смотреть на иностранные фонды, если вы не можете их купить.</li>
 <li>Исключите заведомо дорогие и высокорискованные формы вложений: ПИФы, ETN, ETC, Commodity pools, активно-управляемые фонды, фонды с синтетической репликацией с передачей активов.</li>
-<li>Выберите 5–6 фондов с наименьшей скоростью отставания от индекса (если она оказывается меньше комиссии, считайте комиссию за скорость отставания) и 5–6 фондов с наименьшей средней накопленной ошибкой отслеживания. Фонды со скоростью отставания больше 1,2%г и ошибкой отслеживания больше 1% исключайте.</li>
-<li>Оставьте только те фонды, которые вошли в обе группы лидеров.</li>
-<li>Выберите тот, скорость отставания которого минимальна (предполагается, что отставание выплачивающих фондов посчитано с учётом уплаты налога и расходов на реинвестирование).</li>
+<li>Выберите 5–6 фондов с наименьшей скоростью отставания от индекса (если она оказывается меньше комиссии, считайте комиссию за скорость отставания) и 5–6 фондов с наименьшей средней накопленной ошибкой отслеживания.</li>
+<li>Оставьте только те фонды, которые вошли в обе группы лидеров. Если выбирать особо не из чего, последовательно вычёркивайте худшие фонды из каждой группы (один из первой, один из второй), пока не останется только один фонд, присутствующий в обоих.</li>
+<li>Выберите тот, скорость отставания которого минимальна (предполагается, что отставание выплачивающих фондов посчитано с учётом уплаты налога и расходов на реинвестирование), или единственный оставшийся. Но если скорость отставания (уже на всей доступной истории, а не на окне сравнения) такова, что ожидаемая доходность вложений в фонд (= ожидаемая доходность класса активов – скорость отставания) перестаёт оправдывать рисков инструмента, или средняя накопленная ошибка отслеживания превышает 5%, то от такой инвестиции лучше отказаться.</li>
 </ol>
+<p>Корректный расчёт необходимых харктеристик, с учётом рассмотренных выше нюансов, реализован, при моём непосредственном участии, в сервисе <a href="https://indexera.io/screener">Indexera</a>.</p>
     </div>
     <aside>
         <div style="display: flex; flex-direction: column; text-align: right;">
         <div class="share-buttons">
-            <a href="https://vk.com/share.php?url=https://onfin.github.io/literacy/fund_selection&title=Выбор индексных фондов&description=Как выбирать индексные инвестиционные фонды. Основные количественные и качественные характеристики, которые определяют ожидаемую доходность и дополнительные риски." target="_blank"><i class="share">&#xea9d;</i></a>
+            <a href="https://vk.com/share.php?url=https://onfin.github.io/literacy/fund_selection&title=Выбор индексных фондов&description=Как правильно рассчитать и сравнить основные характеристики индексных фондов. Почему нельзя опираться на цифры из отчётности фондов. Какие бывают типы фондов, чем различаются между собой различные способы репликации и каковы их риски. Прочие факторы, влияющие на выбор фондов." target="_blank"><i class="share">&#xea9d;</i></a>
             <a href="https://t.me/share/url?url=https://onfin.github.io/literacy/fund_selection" target="_blank"><i class="share">&#xea9b;</i></a>
             <a href="https://twitter.com/intent/tweet?text=https://onfin.github.io/literacy/fund_selection" target="_blank"><i class="share">&#xea9c;</i></a>
             <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/literacy/fund_selection" target="_blank"><i class="share">&#xea93;</i></a>
