fund_selection update.

--- a/calculators/etf_us_eu_ru.html
+++ b/calculators/etf_us_eu_ru.html
@@ -16,7 +16,7 @@
     <meta property="og:description" content="Расчёт итоговой суммы капитала при инвестициях через американские, европейские и российские биржевые фонды" />
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2020-07-08" />
-        <meta property="og:article:modified_time" content="2020-07-08" />
+        <meta property="og:article:modified_time" content="2020-12-05" />
 <meta property="og:title" content="Расчёт эффективности инвестиций через американские, европейские и российские ETF" />
 <meta property="og:url" content="https://onfin.github.io/calculators/etf_us_eu_ru" />
         <style type="text/css">
@@ -81,7 +81,7 @@
         <h1>Расчёт эффективности инвестиций через американские, европейские и российские ETF</h1>
         <div class="meta">
                 <p class="description">Расчёт итоговой суммы капитала при инвестициях через американские, европейские и российские биржевые фонды</p>
-                <p> Обновлено: <time>2020-07-08</time> </p>
+                <p> Обновлено: <time>2020-12-05</time> </p>
 
         </div>
     </header>
@@ -99,7 +99,7 @@
 <p>Теперь сведём их все в калькулятор. Рассмотрим «американский» фонд — выплачивающий дивиденды, «европейский» — аккумулирующий дивиденды внутри себя, и «российский» — аккумулирующий и освобождённый от налогообложения при продаже (по ЛДВ или ИИС-Б).</p>
 <p>Будем считать по схеме с постепенным накоплением и расходованием капитала.</p>
 <p>Т.к. у нас тут европейсике и американские фонды, размер активов будем считать в долларах. Все расчёты — с поправкой на инфляцию страны проживания.</p>
-<p>Налоги рассчитываются, разумеется, с номинального результата инвестиций по принципу FIFO: раньше купленные паи раньше и продаются. Это важно, потому что при продаже аккумулирующих фондов налоговая база оказывается гораздо выше, чем при получении аналогичной суммы дивидендами.</p>
+<p>Налоги рассчитываются с номинального результата инвестиций по принципу FIFO: раньше купленные паи раньше и продаются.</p>
 <p>«Валютная переоценка» учитывается величиной инфляции: на долгосроке расхождение валютных курсов будет приблизительно равно разнице в накопленных инфляциях. Поэтому два актива в разных валютах, но с одинаковой ожидаемой реальной доходностью, дадут в среднем одинаковые финансовые (и налоговые) результаты после пересчёта в валюту страны проживания.</p>
 <div>
     <strong>Общие параметры</strong>
