--- a/literacy/fund_selection/index.html
+++ b/literacy/fund_selection/index.html
@@ -16,7 +16,7 @@
     <meta property="og:description" content="Как правильно рассчитать и сравнить основные характеристики индексных фондов. Почему нельзя опираться на цифры из отчётности фондов. Какие бывают типы фондов, чем различаются между собой различные способы репликации и каковы их риски. Прочие факторы, влияющие на выбор фондов." />
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2020-11-30" />
-        <meta property="og:article:modified_time" content="2020-11-30" />
+        <meta property="og:article:modified_time" content="2020-12-06" />
 <meta property="og:title" content="Выбор индексных фондов" />
 <meta property="og:url" content="https://onfin.github.io/literacy/fund_selection" />
 
@@ -54,13 +54,13 @@
         <h1>Выбор индексных фондов</h1>
         <div class="meta">
                 <p class="description">Как правильно рассчитать и сравнить основные характеристики индексных фондов. Почему нельзя опираться на цифры из отчётности фондов. Какие бывают типы фондов, чем различаются между собой различные способы репликации и каковы их риски. Прочие факторы, влияющие на выбор фондов.</p>
-                <p> Обновлено: <time>2020-11-30</time> </p>
+                <p> Обновлено: <time>2020-12-06</time> </p>
 
         </div>
     </header>
 
     <div class="content">
-        <p><em>Статья написана для проекта <a href="https://indexera.io/">Indexera</a>, которому я разрабатываю алгоритмы планирования и анализа пассивных портфелей, а также прочей инвестиционной математики.</em></p>
+        <p><em>Статья написана для проекта <a href="https://indexera.io/">Indexera</a>, которому я разрабатываю алгоритмы планирования и анализа пассивных портфелей, а также прочей инвестиционной математики, в том числе и представленные далее методики. Ими уже можно там воспользоваться (правда пока только преимущественно для российских фондов).</em></p>
 <div class="toc">
 <ul>
 <li><a href="#_1">Базовый индекс, бенчмарк и активные фонды</a></li>
@@ -189,7 +189,7 @@ s-87.3,378.7,-272.6,1166c-185.3,787.3,-279.3,1182.3,-282,1185
 c-2,6,-10,9,-24,9
 c-8,0,-12,-0.7,-12,-2z M1001 80
 h400000v40h-400000z'/></svg></span></span></span><span class="vlist-s">​</span></span><span class="vlist-r"><span class="vlist" style="height:0.788405em;"><span></span></span></span></span></span><span class="mspace" style="margin-right:0.2777777777777778em;"></span><span class="mrel">≈</span><span class="mspace" style="margin-right:0.2777777777777778em;"></span></span><span class="base"><span class="strut" style="height:0.94444em;vertical-align:-0.19444em;"></span><span class="mord">2</span><span class="mpunct">,</span><span class="mspace" style="margin-right:0.16666666666666666em;"></span><span class="mord">3</span><span class="mord">8</span><span class="mord">%</span></span></span></span></span></span></p>
-<p>Можно считать этот способ «лукавым», однако он, на мой взгляд, корректнее первого. Если отставание включать в ошибку отслеживания, то становится непонятно, в чём именно проблема с фондом. То ли он отслеживает какой-то другой индекс, то ли у него собственные издержки велики. Два независимых параметра иметь гораздо удобнее. Однако свою скорость отставания фонды афишировать не очень любят.</p>
+<p>Можно считать этот способ «лукавым», однако он, на мой взгляд, корректнее первого. Если отставание включать в ошибку отслеживания, то становится непонятно, в чём именно проблема с фондом. То ли он отслеживает какой-то другой индекс, то ли у него собственные издержки велики. Два независимых параметра иметь гораздо удобнее. Однако свою скорость отставания фонды афишировать не очень любят (да и посчитать её правильно — непросто).</p>
 <p>Помимо того, то фонды рассчитывают ошибку отслеживания по разным методикам, проблема ещё в том, что фонды считают её относительно совокупных чистых активов (СЧА, NAV) на пай. Для частного инвестора это имеет мало смысла:</p>
 <p>Во-первых, размер СЧА фонд (особенно (Б)ПИФ) может считать с достаточно большим количеством степеней свободы, особенно если его активы торгуются в разное время, и/или активы и паи торгуются в разное время, или имеют низкую ликвидность. У крупных фондов на низколиквидные активы или активы с других рынков рыночная цена пая может лучше отражать справедливую стоимость активов, нежели рассчитанная фондом (поэтому такая характеристика как премия/дисконт рыночной цены к чистым активам может терять смысл).</p>
 <p>Во-вторых, частный инвестор, в отличие от профучастников, не может покупать/продавать паи по расчётной цене. Если в периоды рыночной волатильности фонд/профучастники не успевают создавать/погашать паи с необходимой скоростью, то рыночная цена значительно отклоняется от расчётной. При этом фонд может честно рапортовать о замечательном отслеживании индекса, тогда как частный инвестор лучше бы приобрёл паи конкурента, у которого выше ошибка отслеживания относительно расчётной цены, зато рыночная гораздо лучше следует за расчётной.</p>
@@ -263,14 +263,14 @@ c-4-3.333-8.333-7.667-13 -13l-13-13l77-155 77-156c66 199.333 139 419.667
 <p>Разновидности схем:</p>
 <ul>
 <li>С неполным обеспечением (<em>unfunded</em>) — фонд и его контрагент держат свои корзины у себя и периодически обмениваются накопленными доходностями. Т.к. в непрерывном режиме это делать затруднительно и очень дорого, допускается небольшая (в пределах 10% от стоимости активов) задолженность контрагента перед фондом. В случае его несостоятельности, пайщики фонда рискуют этой суммой + транзакционными издержками на поиск нового контрагента и подстройку под него корзины активов, а также накоплением ошибки отслеживания за это время.</li>
-<li>С полным обеспечением при передаче активов контрагенту (<em>funded</em> + <em>pledge</em>) — фонд передаёт деньги контрагенту, который открывает у себя специальных счёт, и принимает на себя обязательство обеспечить изменение стоимости активов на нём в соответствии с динамикой доходности индекса. А в случае своей несостоятельности — обеспечить передачу активов с этого счёта фонду. В этом сценарии пайщики фонда рискуют <strong>100%</strong> своих активов, по крайней мере до того момента, пока эта передача активов не будет урегулирована. Защиты от взыскания по обязательствам контрагента на них нет, т.к. активы хранятся на его имя.</li>
+<li>С полным обеспечением при передаче активов контрагенту (<em>funded</em> + <em>pledge</em>) — фонд передаёт деньги контрагенту, который открывает у себя специальный счёт, и принимает на себя обязательство обеспечить изменение стоимости активов на нём в соответствии с динамикой доходности индекса. А в случае своей несостоятельности — вернуть активы с этого счёта фонду. В этом сценарии пайщики фонда рискуют <strong>100%</strong> своих активов, по крайней мере до того момента, пока передача активов не будет урегулирована. Защиты от взыскания по обязательствам контрагента на них нет, т.к. активы хранятся на его имя.</li>
 <li>С полным обеспечением без передачи активов (<em>funded</em> + <em>transfer of title</em>) — схема аналогична предыдущей, только специальный счёт открывается на имя фонда, а не его контрагента. В этом варианте, при несостоятельности контрагента, пайщики рискуют только транзакционными издержками на поиск и организацию работы с новым контрагентом и накоплением ошибки отслеживания за это время.</li>
 </ul>
 <p><strong>Фидерная</strong> (<em>feeder</em>).</p>
 <p>В этом случае фонд просто держит паи какого-то другого фонда (вышестоящего фонда, мастер-фонда, <em>master fund</em>), который уже и отслеживает базовый индекс. Таким образом, инвестор получает риски как фидерного, так и мастер-фонда.</p>
 <p>Важный нюанс с комиссиями и ошибкой отслеживания фидерных фондов. В документах фонда в качестве бенчмарка может быть указан или бенчмарк мастер-фонда, или стоимость его пая. В первом случае комиссии мастер-фонда уже учтены в TER фидерного, а ошибка отслеживания сообщается относительно целевого индекса. Во втором, комиссию мастер-фонда надо прибавлять к комиссии фидерного, а ошибку отслеживания пересчитывать самостоятельно т.к. она будет сообщаться относительно стоимости приобретаемых паёв, что вообще никак не согласуется с целями инвестора.</p>
 <h2 id="_7">Размер и время жизни фонда</h2>
-<p>Оценивается по размеру совокупных чистых активов. У маленьких фондов высок риск закрытия и, часто, выше комиссии (хотя в США это не так: старые крупные фонды дороже молодых и мелких). Маленькие БПИФы, в силу несовершенного механизма выпуска/погашения паёв, в общем случае, также страдают от высокой ошибки отслеживания и скорости отставания: потери на торговых операциях отнимают бо́льшую долю от СЧА. В ETF эти потери несёт сторонняя организация и пайщиков фонда они практически не затрагивают.</p>
+<p>Размер оценивается по размеру совокупных чистых активов. У маленьких фондов высок риск закрытия и, часто, выше комиссии (хотя в США это не так: старые крупные фонды дороже молодых и мелких). Маленькие БПИФы, в силу несовершенного механизма выпуска/погашения паёв, в общем случае, также страдают от высокой ошибки отслеживания и скорости отставания: потери на торговых операциях отнимают бо́льшую долю от СЧА. В ETF эти потери несёт сторонняя организация и пайщиков фонда они практически не затрагивают.</p>
 <p>С другой стороны, у крупных фондов гораздо выше косвенные потери на спредах и отсутствия необходимой ликвидности при ребалансировках. Для примера можно посмотреть на <a href="https://indexera.io/funds/9294807">VIOO и IJR</a>: комиссия первого почти в два раза выше (0,10%г против 0,06%г у IJR), но и доходность выше на 0,05%, если смотреть на последние 3 года.</p>
 <p>Многие фонды на самом деле больше, чем кажутся. Когда вы смотрите информацию по какому-то ETF, вы видите СЧА, которые относятся только к паям этого ETF. Однако общие активы фонда могут быть распределены между несколькими ETF (например, выпущенных для обращения на разных рынках, выплачивающих и реинвестирующих дивиденды), и даже несколькими формами вложений (например, ETF и mutual fund).</p>
 <p>Чем дольше фонд существует, тем меньше риски его закрытия (если это индексный фонд, а если активный — скорее выше т.к. даже работавшие в прошлом стратегии имеют тенденцию со временем ломаться и разочаровывать инвесторов).</p>
@@ -296,7 +296,7 @@ c-4-3.333-8.333-7.667-13 -13l-13-13l77-155 77-156c66 199.333 139 419.667
 <li>при продаже паёв реинвестирующего фонда, стоимость которых будет включать причисленные дивиденды и результаты их реинвестирования.</li>
 </ul>
 <p>При прочих равных <em>всегда</em> выгоднее покупать паи реинвестирующих фондов (если вы можете терпеть психологический дискомфорт от продажи паёв на просадках). При получении дивидендов ваша налоговая база всегда будет равна полной сумме дивидендов. При продаже паёв на сумму, равную причисленным дивидендам, налоговая база будет <em>уменьшена</em> на стоимость покупки этих паёв. Т.к. сделки учитываются начиная с самых ранних, эта налоговая база будет <em>стремиться</em> к сумме сделки (= размеру дивидендов), но всегда будет меньше.</p>
-<p>Определить свой дивидендный доход в реинвестирующем фонде довольно просто: стоимость фонда в конце года – (стоимость фонда в начале года × доходность его <em>ценового</em> бенчмарка за год).</p>
+<p>Определить свой дивидендный доход в реинвестирующем фонде довольно просто: стоимость фонда в конце года – (стоимость фонда в начале года × доходность его <em>ценового</em> бенчмарка за год). Если вы какие-то паи покупали/продавали в течение года, то для них (и только для них) вместо стоимости в начале и конце года будет стоимость в день покупки/продажи.</p>
 <h2 id="_10">Как же выбрать?</h2>
 <p>К этому моменту у многих, наверное, уже голова пошла кругом от множества характеристик и нюансов. Поэтому прилагаю примерный алгоритм.</p>
 <ol>
@@ -307,7 +307,6 @@ c-4-3.333-8.333-7.667-13 -13l-13-13l77-155 77-156c66 199.333 139 419.667
 <li>Оставьте только те фонды, которые вошли в обе группы лидеров. Если выбирать особо не из чего, последовательно вычёркивайте худшие фонды из каждой группы (один из первой, один из второй), пока не останется только один фонд, присутствующий в обоих.</li>
 <li>Выберите тот, скорость отставания которого минимальна (предполагается, что отставание выплачивающих фондов посчитано с учётом уплаты налога и расходов на реинвестирование), или единственный оставшийся. Но если скорость отставания (уже на всей доступной истории, а не на окне сравнения) такова, что ожидаемая доходность вложений в фонд (= ожидаемая доходность класса активов – скорость отставания) перестаёт оправдывать рисков инструмента, или средняя накопленная ошибка отслеживания превышает 5%, то от такой инвестиции лучше отказаться.</li>
 </ol>
-<p>Корректный расчёт необходимых харктеристик, с учётом рассмотренных выше нюансов, реализован, при моём непосредственном участии, в сервисе <a href="https://indexera.io/screener">Indexera</a>.</p>
     </div>
     <aside>
         <div style="display: flex; flex-direction: column; text-align: right;">
@@ -326,7 +325,7 @@ c-4-3.333-8.333-7.667-13 -13l-13-13l77-155 77-156c66 199.333 139 419.667
     </main>
 
     <footer>
-
+<div class="prevupnext"><a class="prev" href="/literacy/zero_sum"> &lt;&lt; Рынок как игра с нулевой суммой </a><a class="up" href="/literacy"> &uarr; Грамотность &uarr; </a></div>
 
         <div class="disclaimer">
             <p>Здесь я выкладываю лишь собственные размышления/исследования/расчёты, иногда собственное же изложение чужих мнений или результатов исследований. Размещённая информация может содержать ошибки, быть неактуальной на момент прочтения, допускать множество интерпретаций и проч. Я не занимаюсь образовательной деятельностью и не даю инвестиционных рекомендаций ни на этом сайте, ни в частном порядке.</p>
