--- a/literacy/index.html
+++ b/literacy/index.html
@@ -16,7 +16,7 @@
     <meta property="og:description" content="Циклы статей о финансовой грамотности" />
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2018-12-01" />
-        <meta property="og:article:modified_time" content="2020-08-07" />
+        <meta property="og:article:modified_time" content="2020-12-05" />
 <meta property="og:title" content="Грамотность" />
 <meta property="og:url" content="https://onfin.github.io/literacy" />
 
@@ -100,6 +100,7 @@
 <h2 id="_6">Пассивное инвестирование</h2>
 <ol>
 <li><a href="/literacy/zero_sum">Рынок как игра с нулевой суммой</a></li>
+<li><a href="/literacy/fund_selection">Выбор индексных фондов</a></li>
 </ol>
     </div>
     <aside>
