--- a/literacy/zero_sum.html
+++ b/literacy/zero_sum.html
@@ -16,7 +16,7 @@
     <meta property="og:description" content="Почему активные инвесторы и спекулянты отбирают деньги друг у друга, а пассивных невозможно победить" />
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2020-07-31" />
-        <meta property="og:article:modified_time" content="2020-10-26" />
+        <meta property="og:article:modified_time" content="2020-12-05" />
 <meta property="og:title" content="Рынок как игра с нулевой суммой" />
 <meta property="og:url" content="https://onfin.github.io/literacy/zero_sum" />
         <style>
@@ -82,7 +82,7 @@
         <h1>Рынок как игра с нулевой суммой</h1>
         <div class="meta">
                 <p class="description">Почему активные инвесторы и спекулянты отбирают деньги друг у друга, а пассивных невозможно победить</p>
-                <p> Обновлено: <time>2020-10-26</time> </p>
+                <p> Обновлено: <time>2020-12-05</time> </p>
 
         </div>
     </header>
@@ -160,7 +160,7 @@
     </main>
 
     <footer>
-
+<div class="prevupnext"><a class="prev" href="/literacy/exchange"> &lt;&lt; Как происходят торги на бирже </a><a class="up" href="/literacy"> &uarr; Грамотность &uarr; </a><a class="next" href="/literacy/fund_selection"> Выбор индексных фондов &gt;&gt; </a></div>
 
         <div class="disclaimer">
             <p>Здесь я выкладываю лишь собственные размышления/исследования/расчёты, иногда собственное же изложение чужих мнений или результатов исследований. Размещённая информация может содержать ошибки, быть неактуальной на момент прочтения, допускать множество интерпретаций и проч. Я не занимаюсь образовательной деятельностью и не даю инвестиционных рекомендаций ни на этом сайте, ни в частном порядке.</p>
