portfolio_tldr draft

--- a/literacy/fund_selection/index.html
+++ b/literacy/fund_selection/index.html
@@ -16,7 +16,7 @@
     <meta property="og:description" content="Как правильно рассчитать и сравнить основные характеристики индексных фондов. Почему нельзя опираться на цифры из отчётности фондов. Какие бывают типы фондов, чем различаются между собой различные способы репликации и каковы их риски. Прочие факторы, влияющие на выбор фондов." />
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2020-11-30" />
-        <meta property="og:article:modified_time" content="2020-12-06" />
+        <meta property="og:article:modified_time" content="2020-12-07" />
 <meta property="og:title" content="Выбор индексных фондов" />
 <meta property="og:url" content="https://onfin.github.io/literacy/fund_selection" />
 
@@ -54,7 +54,7 @@
         <h1>Выбор индексных фондов</h1>
         <div class="meta">
                 <p class="description">Как правильно рассчитать и сравнить основные характеристики индексных фондов. Почему нельзя опираться на цифры из отчётности фондов. Какие бывают типы фондов, чем различаются между собой различные способы репликации и каковы их риски. Прочие факторы, влияющие на выбор фондов.</p>
-                <p> Обновлено: <time>2020-12-06</time> </p>
+                <p> Обновлено: <time>2020-12-07</time> </p>
 
         </div>
     </header>
@@ -287,7 +287,7 @@ c-4-3.333-8.333-7.667-13 -13l-13-13l77-155 77-156c66 199.333 139 419.667
 <li>Российские пайщики всегда уплачивают min 13% с полученных от любых фондов денег. Выплаты иностранных фондов надо декларировать. Если со страной фонда есть соглашение об избежании двойного налогообложения этих выплат, то доплатить нужно разницу до 13% (если удержано больше, ничего не платить, но «переплату» не вернут и не зачтут), если нет — оплачивать полные 13% от суммы.</li>
 <li>Для налоговых резидентов других стран могут быть свои нюансы. Например, резиденты Великобритании должны платить НДФЛ не только с полученных на руки выплат, но и с капитализированных внутри фонда. Гражданам США вообще, можно сказать, запрещено вкладываться в зарубежные фонды (ставки и объём отчётности делают это занятие очень сложным и крайне невыгодным).</li>
 </ul>
-<p>Также надо иметь в виду, что при наследовании американского брокерского счёта, США хотят получить с наследников <a href="https://www.law.cornell.edu/uscode/text/26/subtitle-B/chapter-11/subchapter-B">налог</a> вплоть до 40% со стоимости кэша и американских активов на этом счёте свыше 60К$.</p>
+<p>Также надо иметь в виду, что при наследовании ценных бумаг, выпущенных в США (при этом неважно, где они куплены и учитываются), а также американских банковских счетов, суммарной стоимостью свыше 60K$, необходимо подавать налоговую декларацию в IRS и платить <a href="https://www.law.cornell.edu/uscode/text/26/subtitle-B/chapter-11/subchapter-B">налог</a> вплоть <a href="https://www.law.cornell.edu/uscode/text/26/2001#c">до 40%</a>.</p>
 <h2 id="_9">Выплата дивидендов</h2>
 <p>Практически все российские БПИФы дивиденды реинвестирую внутри себя. Американские фонды обязаны выплачивать. Европейские же фонды, как правило, доступны как с реинвестированием дивидендов, так и с выплатой.</p>
 <p>Реинвестирование или выплата дивидендов сама по себе никак не влияет на эффективность фонда. Вся разница в том, в какой именно момент и в каком размере вы будете платить налоги на эти дивиденды:</p>
